refactor: update env vars

--- a/charts/admission-controller/tests/configmap_test.yaml
+++ b/charts/admission-controller/tests/configmap_test.yaml
@@ -20,7 +20,7 @@ tests:
       - isSubset:
           path: data
           content:
-            POLICIES: '["one","two"]'
+            WORKER_POLICIES: '["one","two"]'
           template: templates/webhook/configmap.yaml
       - isSubset:
           path: data
@@ -43,7 +43,7 @@ tests:
         - isSubset:
             path: data
             content:
-              POLICIES: '["one","two"]'
+              WORKER_POLICIES: '["one","two"]'
             template: templates/webhook/configmap.yaml
         - notExists:
             path: data.CACHE_FLUSH_PERIOD
@@ -75,5 +75,45 @@ tests:
             AC_NAMESPACE: "cocotero"
             AC_SERVICE_ACCOUNT_NAME: "foobar"
             WORKERS: "2"
-            WORKER_SKIPTLS: "true"
+            WORKER_VERIFYSSL: "true"
+          template: templates/webhook/configmap.yaml
+  - it: Created the configmap with verifyssl to false
+    set:
+      clusterName: test-k8s
+      webhook:
+        name: "webhook"
+        acConfig: |
+          test
+        workers:
+          verifySSL: false
+    asserts:
+      - containsDocument:
+          kind: ConfigMap
+          apiVersion: v1
+          template: templates/webhook/configmap.yaml
+      - isSubset:
+          path: data
+          content:
+            WORKERS: "2"
+            WORKER_VERIFYSSL: "false"
+          template: templates/webhook/configmap.yaml
+  - it: Created the configmap with verifyssl to true
+    set:
+      clusterName: test-k8s
+      webhook:
+        name: "webhook"
+        acConfig: |
+          test
+        workers:
+          verifySSL: true
+    asserts:
+      - containsDocument:
+          kind: ConfigMap
+          apiVersion: v1
+          template: templates/webhook/configmap.yaml
+      - isSubset:
+          path: data
+          content:
+            WORKERS: "2"
+            WORKER_VERIFYSSL: "true"
           template: templates/webhook/configmap.yaml
