--- a/charts/admission-controller/templates/webhook/configmap.yaml
+++ b/charts/admission-controller/templates/webhook/configmap.yaml
@@ -32,12 +32,12 @@ data:
   {{- end}}
   {{- if .Values.webhook.workers }}
   WORKERS: "{{.Values.webhook.workers.number | default 2 }}"
-  WORKER_SKIPTLS: "{{.Values.webhook.workers.skiptlsverify | default "true" }}"
-  POLICIES: {{ toJson .Values.webhook.workers.scanningPolicies | quote }}
+  WORKER_VERIFYSSL: "{{.Values.webhook.workers.verifySSL }}"
+  WORKER_POLICIES: {{ toJson .Values.webhook.workers.scanningPolicies | quote }}
   WORKER_MEMORY_LIMIT: "{{.Values.webhook.workers.memoryLimit | default "2Gi" }}"
   TTL_SECONDS_AFTER_FINISHED: "{{.Values.webhook.workers.ttlSecondsAfterFinished | default 1000 }}"
   ACTIVE_DEADLINE_SECONDS: "{{.Values.webhook.workers.activeDeadlineSeconds | default 2000 }}"
   {{- else }}
   WORKERS: "2"
-  WORKER_SKIPTLS: "true"
+  WORKER_VERIFYSSL: "true"
   {{- end}}
