--- a/charts/node-analyzer/templates/configmap-host-scanner.yaml
+++ b/charts/node-analyzer/templates/configmap-host-scanner.yaml
@@ -10,12 +10,7 @@ data:
   api_endpoint: https://{{ include "nodeAnalyzer.apiEndpoint" . }}
   cluster_name: {{ required "A valid clusterName is required" (include "nodeAnalyzer.clusterName" . ) }}
   {{- if hasKey .Values.global.sysdig "tags" }}
-    {{- $customTags := list -}}
-    {{ range $key, $val := .Values.global.sysdig.tags }}
-      {{- $entry := list $key $val | join ":" -}}
-      {{- $customTags = append $customTags $entry -}}
-    {{ end }}
-  custom_tags: {{ join "," $customTags | quote }}
+  custom_tags: {{ include "agent.tags" . }}
   {{- end }}
   {{- if hasKey .Values.nodeAnalyzer.hostScanner "scanOnStart" }}
   scan_on_start: "{{ .Values.nodeAnalyzer.hostScanner.scanOnStart }}"
