docs(registry-scanner): remove nodeSelector from docs (#1337)

--- a/charts/registry-scanner/values.yaml
+++ b/charts/registry-scanner/values.yaml
@@ -175,9 +175,8 @@ existingSecretName: ""
 
 # Pod annotations for the Registry scanner.
 podAnnotations: {}
-
 # Security context for Registry Scanner pod.
-podSecurityContext: {}
+# podSecurityContext: {}
   # fsGroup: 2000
 
 # Security context for Registry Scanner container.
@@ -201,13 +200,12 @@ resources: {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
-
 # Configure `nodeSelector` for scheduling the registry scanner pod.
-nodeSelector: {}
+# nodeSelector: {}
 # Configure tolerations for scheduling the registry scanner pod.
-tolerations: []
+# tolerations: []
 # Configure affinity for scheduling the registry scanner pod.
-affinity: {}
+# affinity: {}
 
 scanOnStart:
   # Specify whether to start the post-install scanner job, in addition to the cronjob.
