--- a/charts/admission-controller/templates/webhook/configmap.yaml
+++ b/charts/admission-controller/templates/webhook/configmap.yaml
@@ -35,6 +35,7 @@ data:
   WORKER_VERIFYSSL: "{{.Values.webhook.workers.verifySSL }}"
   WORKER_POLICIES: {{ toJson .Values.webhook.workers.scanningPolicies | quote }}
   WORKER_MEMORY_LIMIT: "{{.Values.webhook.workers.memoryLimit | default "2Gi" }}"
+  WORKER_VOLUME_SIZE_LIMIT: "{{.Values.webhook.workers.volumeSizeLimit | default "2Gi" }}"
   TTL_SECONDS_AFTER_FINISHED: "{{.Values.webhook.workers.ttlSecondsAfterFinished | default 1000 }}"
   ACTIVE_DEADLINE_SECONDS: "{{.Values.webhook.workers.activeDeadlineSeconds | default 2000 }}"
   {{- else }}
