--- a/charts/node-analyzer/templates/configmap-host-scanner.yaml
+++ b/charts/node-analyzer/templates/configmap-host-scanner.yaml
@@ -10,7 +10,9 @@ data:
   api_endpoint: https://{{ include "nodeAnalyzer.apiEndpoint" . }}
   cluster_name: {{ required "A valid clusterName is required" (include "nodeAnalyzer.clusterName" . ) }}
   {{- if hasKey .Values.global.sysdig "tags" }}
+  {{- if .Values.global.sysdig.tags }}
   custom_tags: {{ include "agent.tags" . }}
+  {{- end }}
   {{- end }}
   {{- if hasKey .Values.nodeAnalyzer.hostScanner "scanOnStart" }}
   scan_on_start: "{{ .Values.nodeAnalyzer.hostScanner.scanOnStart }}"
