--- a/charts/registry-scanner/tests/configmap_test.yaml
+++ b/charts/registry-scanner/tests/configmap_test.yaml
@@ -139,3 +139,12 @@ tests:
       - matchRegex:
           path: data['config.yaml']
           pattern: allowListMemberAccountIDs:\n\s*- 123456789
+
+  - it: registry url if registry type gar
+    set:
+      config:
+        registryType: gar
+    asserts:
+      - notMatchRegex:
+          path: data['config.yaml']
+          pattern: "url:.*$"
