--- a/charts/registry-scanner/values.yaml
+++ b/charts/registry-scanner/values.yaml
@@ -36,8 +36,8 @@ config:
   icrIamApiSkipTLS: false
   gar:
     # List of Google Artifact Registry regions where registries are located.
-    regions:
-    - us-central1
+    regions: []
+    # - us-central1
   aws:
     # The AWS credentials: `AccessKeyId`.
     accessKeyId: ""
