feat(cluster-scanner): Add dynamic envs to values (#1358)

--- a/charts/cluster-scanner/templates/deployment.yaml
+++ b/charts/cluster-scanner/templates/deployment.yaml
@@ -277,6 +277,10 @@ spec:
                 name: {{ include "cluster-scanner.fullname" . }}
                 key: rsi_js_server_metrics_port
                 optional: true
+          {{- range $key, $value := .Values.runtimeStatusIntegrator.env }}
+          - name: "{{ $key }}"
+            value: "{{ $value }}"
+          {{- end }}
       {{- with .Values.runtimeStatusIntegrator }}
           livenessProbe:
             httpGet:
@@ -535,6 +539,10 @@ spec:
                 name: {{ include "cluster-scanner.fullname" . }}
                 key: cache_redis_ttl
                 optional: true
+          {{- end }}
+          {{- range $key, $value := .Values.imageSbomExtractor.env }}
+          - name: "{{ $key }}"
+            value: "{{ $value }}"
           {{- end }}
       {{- with .Values.imageSbomExtractor }}
           resources:
