--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -147,6 +147,9 @@ runtimeStatusIntegrator:
       # Runtime Status Integrator Memory requests per replica
       memory: 350Mi
 
+  # Runtime Status Integrator env allows the definition of environment variables
+  env: {}
+
   natsJS:
     # The username to be used in the NATS JetStream instance the Runtime Status
     # Integrator is going to start
@@ -179,6 +182,9 @@ imageSbomExtractor:
       cpu: "350m"
       # Image SBOM Extractor Memory requests per replica
       memory: 350Mi
+
+  # Image SBOM Extractor env allows the definition of environment variables
+  env: {}
 
   cache:
     # The type of cache to use.
