--- a/charts/cluster-scanner/templates/secret.yaml
+++ b/charts/cluster-scanner/templates/secret.yaml
@@ -14,6 +14,14 @@ data:
 {{- if and (eq .Values.imageSbomExtractor.cache.type "distributed") ((.Values.imageSbomExtractor.cache.redis).password) }}
   cache_redis_password: {{ .Values.imageSbomExtractor.cache.redis.password | b64enc | quote }}
 {{- end }}
+{{- if .Values.runtimeStatusIntegrator.natsJS.tls.enabled }}
+  {{- if eq (include "cluster-scanner.nats.tls.customTLS" .) "true" }}
+  js_tls_key_path: {{ required "please provide a TLS private key path" .Values.runtimeStatusIntegrator.natsJS.tls.key |  quote }}
+  js_tls_cert_path: {{ required "please provide a TLS certificate path" .Values.runtimeStatusIntegrator.natsJS.tls.cert | quote }}
+  {{- else }}
+  {{- include "cluster-scanner.nats.tls.certificate" . }}
+  {{- end }}
+{{- end }}
 {{- if eq (include "sysdig.custom_ca.useValues"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true" }}
 ---
 apiVersion: v1
