--- a/charts/cluster-scanner/tests/secret_test.yaml
+++ b/charts/cluster-scanner/tests/secret_test.yaml
@@ -60,3 +60,43 @@ tests:
     asserts:
       - isNull:
           path: data.cache_redis_password
+
+  - it: "does not write cert secrets when TLS disabled"
+    set:
+      global.sysdig.accessKey: "secret"
+      runtimeStatusIntegrator.natsJS.tls.enabled: false
+    asserts:
+      - isNull:
+          path: data.js_tls_key_path
+      - isNull:
+          path: data.js_tls_cert_path
+      - isNull:
+          path: data.js_tls_ca_paths
+      - isNull:
+          path: data.js_tls_key
+      - isNull:
+          path: data.js_tls_cert
+      - isNull:
+          path: data.js_tls_ca
+
+  - it: "writes cert secrets when TLS enabled"
+    set:
+      global.sysdig.accessKey: "secret"
+      runtimeStatusIntegrator.natsJS.tls.enabled: true
+      runtimeStatusIntegrator.natsJS.tls.ca: /a/b/ca.pem
+    asserts:
+      - not: true
+        isNull:
+          path: data.js_tls_key_path
+      - not: true
+        isNull:
+          path: data.js_tls_cert_path
+      - not: true
+        isNull:
+          path: data.js_tls_key
+      - not: true
+        isNull:
+          path: data.js_tls_cert
+      - not: true
+        isNull:
+          path: data.js_tls_ca
