--- a/charts/cluster-scanner/tests/configmap_test.yaml
+++ b/charts/cluster-scanner/tests/configmap_test.yaml
@@ -375,3 +375,25 @@ tests:
       - equal:
           path: data.enable_platform_services
           value: "true"
+
+  - it: "has nats connection config when TLS enabled"
+    set:
+      global.sysdig.accessKey: "secret"
+      runtimeStatusIntegrator.natsJS.tls.enabled: true
+    asserts:
+      - equal:
+          path: data.ise_js_tls_skip_verify
+          value: "false"
+      - not: true
+        isNull:
+          path: data.ise_js_tls_ca_paths
+
+  - it: "does not have nats connection config when TLS disabled"
+    set:
+      global.sysdig.accessKey: "secret"
+      runtimeStatusIntegrator.natsJS.tls.enabled: false
+    asserts:
+      - isNull:
+          path: data.ise_js_tls_skip_verify
+      - isNull:
+          path: data.ise_js_tls_ca_paths
